depthwise_separable/solution1/csim/report/depthwise_separable_csim.log
INFO: [SIM 2] *************** CSIM start ***************
INFO: [SIM 4] CSIM will launch GCC as the compiler.
   Compiling ../../../conv_test.cpp in debug mode
csim.mk:77: recipe for target 'obj/conv_test.o' failed
In file included from E:/Vivado/xilinx/Vivado/2018.3/include/floating_point_v7_0_bitacc_cmodel.h:143:0,
                 from E:/Vivado/xilinx/Vivado/2018.3/include/hls_fpo.h:186,
                 from E:/Vivado/xilinx/Vivado/2018.3/include/hls_half.h:44,
                 from E:/Vivado/xilinx/Vivado/2018.3/include/etc/ap_private.h:90,
                 from E:/Vivado/xilinx/Vivado/2018.3/include/ap_common.h:641,
                 from E:/Vivado/xilinx/Vivado/2018.3/include/ap_int.h:54,
                 from ../../../conv_test.cpp:2:
E:/Vivado/xilinx/Vivado/2018.3/include/gmp.h:62:0: warning: "__GMP_LIBGMP_DLL" redefined
 #define __GMP_LIBGMP_DLL  0
 
In file included from E:/Vivado/xilinx/Vivado/2018.3/include/hls_fpo.h:186:0,
                 from E:/Vivado/xilinx/Vivado/2018.3/include/hls_half.h:44,
                 from E:/Vivado/xilinx/Vivado/2018.3/include/etc/ap_private.h:90,
                 from E:/Vivado/xilinx/Vivado/2018.3/include/ap_common.h:641,
                 from E:/Vivado/xilinx/Vivado/2018.3/include/ap_int.h:54,
                 from ../../../conv_test.cpp:2:
E:/Vivado/xilinx/Vivado/2018.3/include/floating_point_v7_0_bitacc_cmodel.h:135:0: note: this is the location of the previous definition
 #define __GMP_LIBGMP_DLL 1
 
In file included from ../../../conv_test.cpp:4:0:
../../../conv2d.h: In instantiation of 'void Inverted(hls::stream<ap_uint<(IN_BIT * IN_CH)> >&, const ap_uint<INC_BIT> (*)[9], const ap_uint<INC_BIT> (*)[(((expand_ratio * IN_CH) * OUT_CH) / PE)], const ap_uint<INC_BIT> (*)[((OUT_CH * IN_CH) / PE)], const ap_int<INC_BIT> (*)[IN_CH], const ap_int<BIAS_BIT> (*)[IN_CH], const ap_int<INC_BIT> (*)[(OUT_CH / PE)], const ap_int<BIAS_BIT> (*)[(OUT_CH / PE)], hls::stream<ap_uint<(Cin * Ibit)> >&, unsigned int) [with unsigned int IN_ROW = 2u; unsigned int IN_COL = 2u; unsigned int IN_CH = 3u; unsigned int IN_BIT = 4u; unsigned int OUT_CH = 9u; unsigned int OUT_BIT = 8u; unsigned int W_BIT = 4u; unsigned int M_BIT = 8u; unsigned int INC_BIT = 4u; unsigned int BIAS_BIT = 4u; unsigned int expand_ratio = 1u; unsigned int PE = 1u; unsigned int S = 2u]':
../../../conv_test.cpp:123:8:   required from here
../../../conv2d.h:573:102: error: no matching function for call to 'conv1x1_bn_act(hls::stream<ap_uint<12> >&, const ap_uint<4> (*&)[27], const ap_int<4> (*&)[9], const ap_int<4> (*&)[9], hls::stream<ap_uint<36> >&, int)'
       conv1x1_bn_act<IN_ROW,IN_COL,IN_CH,IN_BIT,hidden_dim,OUT_BIT,INC_BIT,BIAS_BIT,W_BIT,M_BIT,1,PE>(in,weights_conv1_1,inc_conv1,bias_conv1,out_temp,1);//ËøôÈáåÂ∞ºÁéõÊò?‰∏?Êô?ÈÄöÂç∑Áß?
       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../../conv2d.h:212:6: note: candidate: template<unsigned int IN_ROW, unsigned int IN_COL, unsigned int IN_CH, unsigned int IN_BIT, unsigned int OUT_CH, unsigned int OUT_BIT, unsigned int W_BIT, unsigned int M_BIT, unsigned int INC_BIT, unsigned int BIAS_BIT, unsigned int SIMD, unsigned int PE> void conv1x1_bn_act(hls::stream<ap_uint<(IN_BIT * IN_CH)> >&, const ap_uint<(SIMD * W_BIT)> (*)[((IN_CH / SIMD) * (OUT_CH / PE))], const ap_uint<INC_BIT> (*)[(OUT_CH / PE)], const ap_int<BIAS_BIT> (*)[(OUT_CH / PE)], hls::stream<ap_uint<(OUT_BIT * OUT_CH)> >&, unsigned int)
 void conv1x1_bn_act(
      ^~~~~~~~~~~~~~
../../../conv2d.h:212:6: note:   template argument deduction/substitution failed:
../../../conv2d.h:573:102: note:   cannot convert 'weights_conv1_1' (type 'const ap_uint<4> (*)[27]') to type 'const ap_uint<4> (*)[9]'
       conv1x1_bn_act<IN_ROW,IN_COL,IN_CH,IN_BIT,hidden_dim,OUT_BIT,INC_BIT,BIAS_BIT,W_BIT,M_BIT,1,PE>(in,weights_conv1_1,inc_conv1,bias_conv1,out_temp,1);//ËøôÈáåÂ∞ºÁéõÊò?‰∏?Êô?ÈÄöÂç∑Áß?
       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
make: *** [obj/conv_test.o] Error 1
ERR: [SIM 100] 'csim_design' failed: compilation error(s).
INFO: [SIM 3] *************** CSIM finish ***************
